@@ -1,3 +1,7 @@
+version 20070617_2
+When you use the quick palette to make a change, then close it,
+it now updates the page.
+
 version 20070617_1
 Only have the encrypt button when in "edit" mode.  There's no point
 to it in the "view" mode.  Updated the Selenium tests.
